--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/axios": "^5.9.7",
+    "@nuxtjs/auth": "^4.9.1",
+    "@nuxtjs/axios": "^5.11.0",
     "@nuxtjs/proxy": "^1.3.3",
     "material-design-icons": "^3.0.1",
     "material-design-icons-iconfont": "^5.0.1",
